--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,5 +1,5 @@
 // Replace this with your own font imports!
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Athelas:wght@400;600;700&family=Sans+Serif:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Times:wght@400;600;700&family=Sans+Serif:wght@400;600&display=swap');
 :root {
   --font-body: "Sans Serif";
   --font-header: "Athelas";
