--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,8 +1,8 @@
 // Replace this with your own font imports!
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Times:wght@400;600;700&family=Sans+Serif:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Bodoni+MT:wght@400;600;700&family=Sans+Serif:wght@400;600&display=swap');
 :root {
   --font-body: "Sans Serif";
-  --font-header: "Times";
+  --font-header: "Bodoni MT";
   --font-mono: "Fira Code"
 }
 
