--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,8 +1,8 @@
 // Replace this with your own font imports!
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Lora:ital,wght@0,400;0,600;0,700;1,400&display=swap;700&family=Sans+Serif:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Playfair+Display:wght@400;600;700&display=swap&family=Cormorant+Garamond:wght@400;600&display=swap');
 :root {
-  --font-body: "Sans Serif";
-  --font-header: "Lora";
+  --font-body: "Cormorant Garamond";
+  --font-header: "Playfair Display";
   --font-mono: "Fira Code"
 }
 
