--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,8 +1,8 @@
 // Replace this with your own font imports!
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Cormorant:wght@500;600;700&display=swap&family=Cormorant+Garamond:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Cormorant:wght@500;600;700&display=swap&family=Cormorant+Garamond:wght@600;700&display=swap&family=Noto+Serif+TC:wght@400;500&display=swap');
 :root {
   --font-body: "Cormorant Garamond";
-  --font-header: "Cormorant";
+  --font-header: "Cormorant" & "Noto Serif Traditional Chinese";
   --font-mono: "Fira Code"
 }
 
