--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,7 +1,7 @@
 // Replace this with your own font imports!
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Cormorant:wght@500;600;700&display=swap&family=Times:wght@500;600&display=swap&family=Noto+Serif+TC:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Cormorant:wght@500;600;700&display=swap&family=Noto+Serif+TC:wght@400;500&display=swap');
 :root {
-  --font-body: "Times" & "Noto Serif Traditional Chinese";
+  --font-body: "Noto Serif Traditional Chinese";
   --font-header: "Cormorant";
   --font-mono: "Fira Code"
 }
