--- a/layouts/partials/page-list.html
+++ b/layouts/partials/page-list.html
@@ -11,7 +11,7 @@
             <div class="spacer"></div>
             <ul class="tags">
                 {{ range (.GetTerms "tags") }}
-                <h5><a href="{{ .Permalink }}">{{ .LinkTitle | title}}</a></h5>
+                <li><a href="{{ .Permalink }}">{{ .LinkTitle | title}}</a></li>
                 {{ end }}
             </ul>
         </div>
