--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -34,6 +34,7 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
+  font-size: 25px;
   max-width: 100%;
   box-sizing: border-box;
   background-color: var(--light);
