--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -34,7 +34,7 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
-  font-size: 25px;
+  font-size: 15x;
   max-width: 100%;
   box-sizing: border-box;
   background-color: var(--light);
@@ -216,7 +216,7 @@ article {
 
 .tags {
   list-style: none;
-  font-size: 20px;
+  font-size: 10px;
   padding-left: 0;
 
   & .meta {
