--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,28 +1,28 @@
 // Add your own CSS here!
 
 :root {
-  --light: #faf8f8;
-  --dark: #141021;
-  --secondary: #284b63;
-  --tertiary: #84a59d;
+  --light: #faf8f8; (background)
+  --dark: #101421; (header)
+  --secondary: #284b63; (blog title)
+  --tertiary: #6a6f85; (title when hover)
   --visited: #afbfc9;
   --primary: #f28482;
-  --gray: #4e4e4e;
-  --lightgray: #f0f0f0;
+  --gray: #3c3c3c; (text)
+  --lightgray: #f0f0f0; (search bar)
   --outlinegray: #dadada;
   --million-progress-bar-color: var(--secondary);
   --highlighted: #f5dfaf88;
 }
 
 [saved-theme="dark"] {
-  --light: #1e1e21 !important;
-  --dark: #fbfffe !important;
-  --secondary: #6b879a !important;
+  --light: #1a1a1d !important; (dark background)
+  --dark: #fbfffe !important; (header)
+  --secondary: #6b879a !important; (blog title)
   --visited: #4a575e !important;
-  --tertiary: #84a59d !important;
+  --tertiary: #6a6f85 !important; (blog title when hover)
   --primary: #f58382 !important;
-  --gray: #d4d4d4 !important;
-  --lightgray: #292633 !important;
+  --gray: #d4d4d4 !important; (text)
+  --lightgray: #292633 !important; (search bar)
   --outlinegray: #343434 !important;
   --highlighted: #574010;
 }
