--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -4,7 +4,7 @@
   --light: #faf8f8; 
   --dark: #101421;
     --secondary: #284b63;
-  --tertiary: #6a6f85;
+  --tertiary: #84a59d;
   --visited: #afbfc9;
   --primary: #f28482;
   --gray: #3c3c3c;
@@ -19,7 +19,7 @@
   --dark: #fbfffe !important;
   --secondary: #6b879a !important;
   --visited: #4a575e !important;
-  --tertiary: #6a6f85 !important; 
+  --tertiary: #84a59d !important; 
   --primary: #f58382 !important;
   --gray: #d4d4d4 !important; 
   --lightgray: #292633 !important;
