--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -7,7 +7,7 @@
   --tertiary: #84a59d;
   --visited: #afbfc9;
   --primary: #f28482;
-  --gray: #3c3c3c;
+  --gray: #383838;
   --lightgray: #f0f0f0;
   --outlinegray: #dadada;
   --million-progress-bar-color: var(--secondary);
